# janus

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  entitlements.plist  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  decrypt.rs  encrypt.rs  error.rs  github.rs  group.rs  lib.rs  main.rs
src/keystore/: keychain.rs  mod.rs
tests/: integration.rs
