[package]
name = "janus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitHub SSH key-based multi-recipient encryption with LINE-style group key management"
license = "MIT OR Apache-2.0"

[lib]
name = "janus"
path = "src/lib.rs"

[[bin]]
name = "janus"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.2", features = ["ssh", "armor"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
